[package]
edition = "2021"
name = "http3-pipedproxy"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
bytes = "1"
futures = "0.3"
h3 = {git = "https://github.com/hyperium/h3"}
h3-quinn = {git = "https://github.com/hyperium/h3"}
http = "0.2"
rcgen = {version = "0.7.0"}
rustls = {version = "0.20", features = ["dangerous_configuration"]}
rustls-native-certs = "0.6"
structopt = "0.3"
tokio = {version = "1", features = ["full"]}
tokio-stream = "0.1"
tracing = "0.1.10"
tracing-subscriber = {version = "0.2.7", default-features = false, features = ["fmt", "ansi", "env-filter", "chrono", "tracing-log"]}
webpki = "0.22"
